--- a/src/app/paginas/gestionproductos/gestionproductos.component.html
+++ b/src/app/paginas/gestionproductos/gestionproductos.component.html
@@ -3,50 +3,88 @@
 <div class="wrapper">
   <header>Gestión de Productos</header>
 
-  <div class="container-box">
+  <div class="contenido-pro">
+    <div class="container-box">
+      <h2 class="morado text-center">Agregar Producto</h2>
+      <form [formGroup]="productoForm" (ngSubmit)="agregarProducto()">
 
-    <!-- Inputs -->
-    <input 
-      [(ngModel)]="productName" 
-      placeholder="Nombre del producto"
-      type="text"
-    />
+        <div class="formu mb-3">
+          <label>Nombre:</label>
+          <input type="text" formControlName="nombre" placeholder="Ingresa el nombre del producto">
+        </div>
 
-    <input 
-      [(ngModel)]="productPrice" 
-      type="number" 
-      placeholder="Precio"
-    />
+        <div class="formu mb-3">
+          <label>Descripcion:</label>
+          <input type="text" formControlName="descripcion" placeholder="Ingresa la descripcion del producto">
+        </div>
 
-    <button (click)="addProduct()">Agregar</button>
+        <div class="formu mb-3">
+          <label>Precio:</label>
+          <input type="number" formControlName="precio" placeholder="Ingresa el precio del producto">
+        </div>
 
-    <!-- Tabla -->
-    <table *ngIf="products.length > 0; else noData">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Producto</th>
-          <th>Precio</th>
-          <th>Acciones</th>
-</tr>
-      </thead>
+        <div class="formu mb-3">
+          <label>Stock:</label>
+          <input type="number" formControlName="stock" placeholder="Ingresa el stock del producto">
+        </div>
 
-      <tbody>
-        <tr *ngFor="let p of products; index as i">
-          <td>{{ i + 1 }}</td>
-          <td>{{ p.name }}</td>
-          <td>${{ p.price }}</td>
-          <td class="actions">
-            <button (click)="editProduct(i)">Editar</button>
-            <button (click)="deleteProduct(i)">Eliminar</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+        <div class="formu mb-3">
+          <label>Marca:</label>
+          <input type="text" formControlName="marca" placeholder="Ingresa la marca del producto">
+        </div>
 
-    <!-- Cuando no hay productos -->
-    <ng-template #noData>
-      <p style="margin-top: 1rem; color: #ccc;">No hay productos registrados.</p>
-    </ng-template>
+        <div class="formu mb-3">
+          <label>Fecha:</label>
+          <input type="datetime-local" formControlName="fechaCreacion">
+        </div>
 
-  </div>
+        <div class="formu mb-3">
+          <label>Tipo de producto:</label>
+          <input type="text" formControlName="tipoProducto" placeholder="Ingresa el tipo de producto">
+        </div>
+
+        <div class="formu mb-3">
+          <label>Imagen:</label>
+          <input type="file" formControlName="imagenPrincipal">
+        </div>
+
+        <div class="formu mb-3">
+          <label>Estado:</label>
+          <input type="text" formControlName="estado" placeholder="Ingresa el estado del producto">
+        </div>
+
+        <button type="submit" class="btn btn-success w-100">Agregar Producto</button>
+      </form>
+
+    </div>
+    <div class="container-box">
+      <h2 class="morado text-center">Lista de Productos</h2>
+      <div class="table-responsive">
+        <table class="table table-dark table-striped text-center mt-3">
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Precio</th>
+              <th>Cantidad</th>
+              <th>Marca</th>
+              <th>Operaciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let p of productos">
+              <td>{{ p.nombre }}</td>
+              <td>{{ p.precio }}</td>
+              <td>{{ p.stock }}</td>
+              <td>{{ p.marca }}</td>
+              <td>
+                <button class="btn btn-primary me-2">Editar</button>
+                <button class="btn btn-danger">Eliminar</button>
+              </td>
+            </tr>
+          </tbody>
+
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
