--- a/src/app/componentes/navbaradmin/navbaradmin.component.html
+++ b/src/app/componentes/navbaradmin/navbaradmin.component.html
@@ -26,7 +26,7 @@
           <li><a routerLink="/gestionproductos" class="dropdown-item">Productos</a></li>
 
           <hr>
-          <li><a routerLink="/login" class="dropdown-item logout">Cerrar Sesión</a></li>
+          <li><a class="logout dropdown-item" (click)="logout()">Cerrar Sesión</a></li>
         </ul>
 
         
