--- a/src/app/paginas/gestionproductos/gestionproductos.component.html
+++ b/src/app/paginas/gestionproductos/gestionproductos.component.html
@@ -6,59 +6,66 @@
   <div class="contenido-pro">
     <div class="container-box">
       <h2 class="morado text-center">Agregar Producto</h2>
-      <form [formGroup]="productoForm" (ngSubmit)="agregarProducto()">
+      <hr>
+      <div class="formulario">
+        <form [formGroup]="productoForm" (ngSubmit)="agregarProducto()" class="formu-hijo">
 
-        <div class="formu mb-3">
-          <label>Nombre:</label>
-          <input type="text" formControlName="nombre" placeholder="Ingresa el nombre del producto">
-        </div>
+          <div class="formu mb-3">
+            <label>Nombre:</label>
+            <input type="text" formControlName="nombre" placeholder="Ingresa el nombre del producto">
+          </div>
 
-        <div class="formu mb-3">
-          <label>Descripcion:</label>
-          <input type="text" formControlName="descripcion" placeholder="Ingresa la descripcion del producto">
-        </div>
+          <div class="formu mb-3">
+            <label>Descripcion:</label>
+            <input type="text" formControlName="descripcion" placeholder="Ingresa la descripcion del producto">
+          </div>
 
-        <div class="formu mb-3">
-          <label>Precio:</label>
-          <input type="number" formControlName="precio" placeholder="Ingresa el precio del producto">
-        </div>
+          <div class="formu mb-3">
+            <label>Precio:</label>
+            <input type="number" formControlName="precio" placeholder="Ingresa el precio del producto">
+          </div>
 
-        <div class="formu mb-3">
-          <label>Stock:</label>
-          <input type="number" formControlName="stock" placeholder="Ingresa el stock del producto">
-        </div>
+          <div class="formu mb-3">
+            <label>Stock:</label>
+            <input type="number" formControlName="stock" placeholder="Ingresa el stock del producto">
+          </div>
 
-        <div class="formu mb-3">
-          <label>Marca:</label>
-          <input type="text" formControlName="marca" placeholder="Ingresa la marca del producto">
-        </div>
+          <div class="formu mb-3">
+            <label>Marca:</label>
+            <input type="text" formControlName="marca" placeholder="Ingresa la marca del producto">
+          </div>
 
-        <div class="formu mb-3">
-          <label>Fecha:</label>
-          <input type="datetime-local" formControlName="fechaCreacion">
-        </div>
+          <div class="formu mb-3">
+            <label>Fecha:</label>
+            <input type="datetime-local" formControlName="fechaCreacion">
+          </div>
 
-        <div class="formu mb-3">
-          <label>Tipo de producto:</label>
-          <input type="text" formControlName="tipoProducto" placeholder="Ingresa el tipo de producto">
-        </div>
+          <div class="formu mb-3">
+            <label>Tipo de producto:</label>
+            <input type="text" formControlName="tipoProducto" placeholder="Ingresa el tipo de producto">
+          </div>
 
-        <div class="formu mb-3">
-          <label>Imagen:</label>
-          <input type="file" formControlName="imagenPrincipal">
-        </div>
+          <div class="formu mb-3">
+            <label>Imagen:</label>
+            <input type="file" #inputAdd (change)="onArchivoSeleccionado($event)">
+          </div>
 
-        <div class="formu mb-3">
-          <label>Estado:</label>
-          <input type="text" formControlName="estado" placeholder="Ingresa el estado del producto">
-        </div>
+          <div class="formu mb-3">
+            <label>Estado:</label>
+            <input type="text" formControlName="estado" placeholder="Ingresa el estado del producto">
+          </div>
+          <div class="boton">
+            <button type="submit" class="btn btn-success">Agregar Producto</button>
+          </div>
+          
+        </form>
+      </div>
 
-        <button type="submit" class="btn btn-success w-100">Agregar Producto</button>
-      </form>
 
     </div>
     <div class="container-box">
       <h2 class="morado text-center">Lista de Productos</h2>
+      <hr>
       <div class="table-responsive">
         <table class="table table-dark table-striped text-center mt-3">
           <thead>
@@ -67,6 +74,7 @@
               <th>Precio</th>
               <th>Cantidad</th>
               <th>Marca</th>
+              <th>Imagen</th>
               <th>Operaciones</th>
             </tr>
           </thead>
@@ -76,9 +84,10 @@
               <td>{{ p.precio }}</td>
               <td>{{ p.stock }}</td>
               <td>{{ p.marca }}</td>
+              <td> <img [src]="'http://localhost:8082/img/' + p.imagenPrincipal" class="imagen" alt="{{p.nombre}}"></td>
               <td>
-                <button class="btn btn-primary me-2">Editar</button>
-                <button class="btn btn-danger">Eliminar</button>
+                <button class="btn btn-sm btn-primary me-2" (click)="editarProducto(p.idProducto)">Editar</button>
+                <button class="btn btn-sm btn-danger" (click)="eliminarProducto(p.idProducto)">Eliminar</button>
               </td>
             </tr>
           </tbody>
@@ -87,4 +96,70 @@
       </div>
     </div>
   </div>
+
+  <!-- =======================
+ MODAL EDITAR PRODUCTO (ESTILO MORADO)
+======================= -->
+  <div class="modal fade" id="modalEditar" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content bg-light">
+
+        <!-- HEADER MORADO -->
+        <div class="modal-header" style="background-color: #5A189A; color: white;">
+          <h5 class="modal-title text-center">Editar Producto</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+        </div>
+
+        <div class="modal-body">
+
+          <form>
+
+            <label class="fw-bold">Nombre</label>
+            <input type="text" class="form-control mb-2" [(ngModel)]="productoEdit.nombre" name="nombre">
+
+            <label class="fw-bold">Descripción</label>
+            <input type="text" class="form-control mb-2" [(ngModel)]="productoEdit.descripcion" name="descripcion">
+
+            <label class="fw-bold">Precio</label>
+            <input type="number" class="form-control mb-2" [(ngModel)]="productoEdit.precio" name="precio">
+
+            <label class="fw-bold">Stock</label>
+            <input type="number" class="form-control mb-2" [(ngModel)]="productoEdit.stock" name="stock">
+
+            <label class="fw-bold">Marca</label>
+            <input type="text" class="form-control mb-2" [(ngModel)]="productoEdit.marca" name="marca">
+
+            <label class="fw-bold">Tipo</label>
+            <input type="text" class="form-control mb-2" [(ngModel)]="productoEdit.tipoProducto" name="tipoProducto">
+
+            <!-- ====== CAMBIAR IMAGEN ====== -->
+            <label class="fw-bold mt-3">Imagen actual:</label><br>
+            <img [src]="'http://localhost:8082/img/' + productoEdit.imagenPrincipal" class="imagen"
+              alt="{{productoEdit.nombre}}">
+
+            <label class="fw-bold mt-3">Nueva imagen:</label>
+            <input type="file" #inputEdit (change)="onNuevaImagen($event)" class="form-control mb-3">
+
+            <!-- Vista previa de la nueva imagen -->
+            <div *ngIf="previewNuevaImagen" class="text-center mt-2">
+              <p class="fw-bold">Vista previa:</p>
+              <img [src]="previewNuevaImagen" class="imagen" style="max-height: 150px; border: 1px solid #ccc;">
+            </div>
+
+
+          </form>
+
+        </div>
+
+        <div class="modal-footer">
+          <button class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button class="btn btn-danger" (click)="guardarCambios()">Guardar cambios</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+
 </div>
